update params and scripts

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "clear": "aws s3 rm --recursive s3://neurodeploy-console",
-    "copy": "aws s3 cp --recursive ./dist s3://neurodeploy-console",
-    "invalidate_cloudfront": "aws cloudfront create-invalidation --paths '/*' --distribution-id E3RLKKLT4VNRTO",
-    "deploy": "pnpm run build; pnpm run clear;  pnpm run copy; pnpm run invalidate_cloudfront",
+    "clear": "aws s3 rm --recursive s3://neuro-console --profile prod",
+    "copy": "aws s3 cp --recursive ./dist s3://neuro-console --profile prod",
+    "invalidate_cloudfront": "aws cloudfront create-invalidation --paths '/*' --distribution-id E15YN00AWMADKB --profile prod",
+    "deploy": "pnpm run build; pnpm run clear;  pnpm run copy;  pnpm run invalidate_cloudfront;",
     "dev-replace-params-start": "mv src/store/params.jsx src/store/params.tmp; cp src/store/dev-params.jsx src/store/params.jsx",
     "dev-clear": "aws s3 rm --recursive s3://playingwithml-console --profile dev",
     "dev-copy": "aws s3 cp --recursive ./dist s3://playingwithml-console --profile dev",
