--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
+    "start": "pnpm run dev-replace-params; vite",
+    "dev": "pnpm run dev-replace-params; vite",
+    "build": "pnpm run dev-replace-params; vite build",
     "serve": "vite preview",
+    "replace-params": "cp src/params/prod-params.js src/params/params.js",
     "clear": "aws s3 rm --recursive s3://neuro-console --profile prod",
     "copy": "aws s3 cp --recursive ./dist s3://neuro-console --profile prod",
     "invalidate_cloudfront": "aws cloudfront create-invalidation --paths '/*' --distribution-id E15YN00AWMADKB --profile prod",
-    "deploy": "pnpm run build; pnpm run clear;  pnpm run copy;  pnpm run invalidate_cloudfront;",
-    "dev-replace-params-start": "mv src/params/params.jsx src/params/params.tmp; cp src/params/dev-params.jsx src/params/params.jsx",
+    "deploy": "pnpm run replace-params; pnpm run build; pnpm run clear;  pnpm run copy;  pnpm run invalidate_cloudfront;",
+    "dev-replace-params": "cp src/params/dev-params.js src/params/params.js",
     "dev-clear": "aws s3 rm --recursive s3://playingwithml-console --profile dev",
     "dev-copy": "aws s3 cp --recursive ./dist s3://playingwithml-console --profile dev",
     "dev-invalidate_cloudfront": "aws cloudfront create-invalidation --paths '/*' --distribution-id E1NB0ZVBAEVHCH --profile dev",
-    "dev-replace-params-end": "mv src/params/params.tmp src/params/params.jsx",
-    "dev-deploy": "pnpm run dev-replace-params-start; pnpm run build; pnpm run dev-clear;  pnpm run dev-copy; pnpm run dev-invalidate_cloudfront; pnpm run dev-replace-params-end"
+    "dev-deploy": "pnpm run dev-replace-params; pnpm run build; pnpm run dev-clear;  pnpm run dev-copy; pnpm run dev-invalidate_cloudfront"
   },
   "license": "MIT",
   "devDependencies": {
